# cpp-game

./: .clang-format  .clang-tidy  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  conanfile.txt
src/: CMakeLists.txt  main.cpp  shader.frag  shader.h  shader.vert
src/draw/: CMakeLists.txt  buffer.h  cga_colour.h  colour.cpp  colour.h
src/mesh/: CMakeLists.txt  mesh.h  mesh.hpp
src/render/: CMakeLists.txt  camera.h  mesh.cpp  mesh.h
src/scene/: CMakeLists.txt  camera.cpp  camera.hpp  light.hpp  mesh.hpp  node.hpp  scene.cpp  scene.hpp
src/shader/: CMakeLists.txt  default_shaders.hpp  shader.cpp  shader.frag  shader.h  shader.hpp  shader.vert
src/shader/defines/: ncnn.h  wcnn.h  wcnp.h
src/vertex/: CMakeLists.txt  vao.h  vao.hpp
template/: generate.cmake  include_str.h
